--- a/index.html
+++ b/index.html
@@ -75,9 +75,21 @@
 
                         <!-- chat -->
                         <div class="chat">
-                            <div>ciao</div>
-                            <div>ciao</div>    
-                            <div>come stai?</div>
+
+                            <div class="mgs-container-send">
+                                <div class="send">ciao</div>
+                            </div>
+
+                            <div class="mgs-container-received">
+                                <div class="received">ciao</div>
+                            </div>
+
+                            <div class="mgs-container-send">
+                                <div class="send">come stai?</div>
+                            </div>  
+                            <div class="mgs-container-send">
+                                <div class="send">come stai?</div>
+                            </div>  
                         </div>
     
                         <!-- input e icons -->
