--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
     
                         <!-- input e icons -->
-                        <div>
+                        <div class="input-msg-container d-flex">
                             <i class="far fa-smile"></i>
                             <input class="input-msg" type="text" placeholder="Scrivi un messaggio">
                             <i class="fas fa-microphone"></i>
