--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="col-5 p-0">
                     <div class="aside-menu">
 
-                        <!-- info utente-proprietario -->
+                        <!-- Info User -->
                         <div class="info-user d-flex align-items-center">
 
                             <img  class="round-img" src="./img/avatar_io.jpg" alt="">
@@ -28,8 +28,8 @@
 
                         </div>
 
-                        <!-- attiva notifiche  -->
-                        <div class="d-flex align-items-center notifications">
+                        <!-- Notifications  -->
+                        <div class="notifications d-flex align-items-center ">
                             <i class="fas fa-bell-slash"></i>
                             <div>
                                 <h5>Ricevi notifiche di nuovi messaggi</h5>
@@ -37,15 +37,13 @@
                             </div>
                         </div>
 
-                        <!-- cerca input  -->
+                        <!-- Search/Input  -->
                         <div class="search-container">
-
                             <i class="fas fa-search"></i>
                             <input type="text" placeholder="Cerca o inizia una nuova chat">
-
                         </div>
     
-                        <!-- lista conttatti  -->
+                        <!-- Contacts List -->
                         <div class="contacts-container">
                             <div class="contact-content"
                             v-for="(contact,index) in contacts"> 
@@ -61,7 +59,7 @@
                 <div class="col-7 p-0 ">
                     <div class="main-menu">
 
-                        <!-- info contatto selezionato -->
+                        <!-- Info Contact  -->
                         <div class="info-contact d-flex align-items-center">
                             <img class="round-img" src="./img/avatar_io.jpg" alt="">
                             <div class="info-contact-content">
@@ -73,7 +71,7 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </div>
 
-                        <!-- chat -->
+                        <!-- Chat -->
                         <div class="chat">
 
                             <div class="mgs-container-send">
@@ -92,7 +90,7 @@
                             </div>  
                         </div>
     
-                        <!-- input e icons -->
+                        <!-- Input & Icons -->
                         <div class="input-msg-container d-flex">
                             <i class="far fa-smile"></i>
                             <input class="input-msg" type="text" placeholder="Scrivi un messaggio">
