--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <div class="info-user d-flex align-items-center">
 
                             <img  class="round-img" src="./img/avatar_io.jpg" alt="">
-                            <div class="name-user">Nome Booleaners</div>
+                            <h5 class="name-user">Nome Booleaners</h5>
                             <i class="fas fa-circle-notch"></i>
                             <i class="fas fa-comment-alt"></i>
                             <i class="fas fa-ellipsis-v"></i>
@@ -88,6 +88,34 @@
                             <div class="mgs-container-send">
                                 <div class="send">come stai?</div>
                             </div>  
+                            <div class="mgs-container-send">
+                                <div class="send">ciao</div>
+                            </div>
+
+                            <div class="mgs-container-received">
+                                <div class="received">ciao</div>
+                            </div>
+
+                            <div class="mgs-container-send">
+                                <div class="send">come stai?</div>
+                            </div>  
+                            <div class="mgs-container-send">
+                                <div class="send">come stai?</div>
+                            </div> 
+                            <div class="mgs-container-send">
+                                <div class="send">ciao</div>
+                            </div>
+
+                            <div class="mgs-container-received">
+                                <div class="received">ciao</div>
+                            </div>
+
+                            <div class="mgs-container-send">
+                                <div class="send">come stai?</div>
+                            </div>  
+                            <div class="mgs-container-send">
+                                <div class="send">come stai?</div>
+                            </div> 
                         </div>
     
                         <!-- Input & Icons -->
