--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <i class="fas fa-bell-slash"></i>
                             <div>
                                 <h5>Ricevi notifiche di nuovi messaggi</h5>
-                                <span>Attiva notifiche desktop</span>
+                                <span class="text-custom">Attiva notifiche desktop</span>
                             </div>
                         </div>
 
@@ -49,7 +49,7 @@
                             v-for="(contact,index) in contacts"> 
 
                                 <img :src="createSrc(contact)" class="round-img" alt="">                       
-                                <span>{{contact.name}}</span>
+                                <h5>{{contact.name}}</h5>
 
                             </div>
                         </div>
@@ -64,7 +64,7 @@
                             <img class="round-img" src="./img/avatar_io.jpg" alt="">
                             <div class="info-contact-content">
                                 <h5>Nome</h5>
-                                <span>ultimo accesso </span>
+                                <span class="text-custom">Ultimo accesso oggi alle</span>
                             </div>
                             <i class="fas fa-search"></i>
                             <i class="fas fa-paperclip"></i>
