--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <div class="info-user d-flex align-items-center">
 
                             <img  class="round-img" src="./img/avatar_io.jpg" alt="">
-                            <h5 class="name-user">Nome Booleaners</h5>
+                            <h5 class="name-user">Mariapia</h5>
                             <i class="fas fa-circle-notch"></i>
                             <i class="fas fa-comment-alt"></i>
                             <i class="fas fa-ellipsis-v"></i>
