--- a/index.html
+++ b/index.html
@@ -74,48 +74,33 @@
 
                         <!-- Chat -->
                         <div class="chat">
-
-                            <div class="mgs-container-send">
-                                <div class="send">ciao</div>
-                            </div>
-
                             <div class="mgs-container-received">
-                                <div class="received">ciao</div>
-                            </div>
-
-                            <div class="mgs-container-send">
-                                <div class="send">come stai?</div>
-                            </div>  
-                            <div class="mgs-container-send">
-                                <div class="send">come stai?</div>
-                            </div>  
-                            <div class="mgs-container-send">
-                                <div class="send">ciao</div>
-                            </div>
-
-                            <div class="mgs-container-received">
-                                <div class="received">ciao</div>
-                            </div>
-
-                            <div class="mgs-container-send">
-                                <div class="send">come stai?</div>
-                            </div>  
-                            <div class="mgs-container-send">
-                                <div class="send">come stai?</div>
+                                <div class="received">
+                                    <div>Ciao</div>
+                                    <div class="data-msg">30/06/2021 17:31</div>
+                                </div>
                             </div> 
+
+
                             <div class="mgs-container-send">
-                                <div class="send">ciao</div>
-                            </div>
+                                <div class="send">
+                                    <div>Hai portato a spasso il cane?</div>
+                                    <div class="data-msg">30/06/2021 17:31</div>
+                                </div>
+                            </div> 
+
+                            <div class="mgs-container-send">
+                                <div class="send">
+                                    <div>Ricordati di dargli da mangiare</div>
+                                    <div class="data-msg">30/06/2021 17:31</div>
+                                </div>
+                            </div> 
 
                             <div class="mgs-container-received">
-                                <div class="received">ciao</div>
-                            </div>
-
-                            <div class="mgs-container-send">
-                                <div class="send">come stai?</div>
-                            </div>  
-                            <div class="mgs-container-send">
-                                <div class="send">come stai?</div>
+                                <div class="received">
+                                    <div>Tutto fatto!</div>
+                                    <div class="data-msg">30/06/2021 17:31</div>
+                                </div>
                             </div> 
                         </div>
     
