--- a/index.html
+++ b/index.html
@@ -102,6 +102,19 @@
                                     <div class="data-msg">30/06/2021 17:31</div>
                                 </div>
                             </div> 
+                            <div class="mgs-container-send">
+                                <div class="send">
+                                    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, possimus pariatur. Ab quibusdam odit, alias tempore nisi ex repellat sapiente consequatur voluptatibus quae voluptate, nesciunt, omnis eligendi sequi asperiores eaque!</div>
+                                    <div class="data-msg">30/06/2021 17:31</div>
+                                </div>
+                            </div> 
+
+                            <div class="mgs-container-received">
+                                <div class="received">
+                                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, perferendis? Provident ab veniam distinctio eveniet animi minus in exercitationem, vitae suscipit explicabo sunt aliquid, quaerat perferendis iure ipsam. Perferendis, optio?</div>
+                                    <div class="data-msg">30/06/2021 17:31</div>
+                                </div>
+                            </div> 
                         </div>
     
                         <!-- Input & Icons -->
