--- a/index.html
+++ b/index.html
@@ -74,47 +74,49 @@
 
                         <!-- Chat -->
                         <div class="chat">
-                            <div class="mgs-container-received">
-                                <div class="received">
-                                    <div>Ciao</div>
-                                    <div class="data-msg">30/06/2021 17:31</div>
+                            <div class="row">
+                                <div class="col-10">
+                                    <div class="mgs-container-received">
+                                        <div class="received">
+                                            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, perferendis? Provident ab veniam distinctio eveniet animi minus in exercitationem, vitae suscipit explicabo sunt aliquid, quaerat perferendis iure ipsam. Perferendis, optio?</div>
+                                            <div class="data-msg">30/06/2021 17:31</div>
+                                        </div>
+                                    </div> 
                                 </div>
-                            </div> 
+                            </div>
 
+                            <div class="row">
+                                <div class="col-10 offset-2">
+                                    <div class="mgs-container-send">
+                                        <div class="send">
+                                            <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, possimus pariatur. Ab quibusdam odit, alias tempore nisi ex repellat sapiente consequatur voluptatibus quae voluptate, nesciunt, omnis eligendi sequi asperiores eaque!</div>
+                                            <div class="data-msg">30/06/2021 17:31</div>
+                                        </div>
+                                    </div> 
+                                </div>
+                            </div>
+                            
+                            <div class="row">
+                                <div class="col-10">
+                                    <div class="mgs-container-received">
+                                        <div class="received">
+                                            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, perferendis? Provident ab veniam distinctio eveniet animi minus in exercitationem, vitae suscipit explicabo sunt aliquid, quaerat perferendis iure ipsam. Perferendis, optio?</div>
+                                            <div class="data-msg">30/06/2021 17:31</div>
+                                        </div>
+                                    </div> 
+                                </div>
+                            </div>
 
-                            <div class="mgs-container-send">
-                                <div class="send">
-                                    <div>Hai portato a spasso il cane?</div>
-                                    <div class="data-msg">30/06/2021 17:31</div>
+                            <div class="row">
+                                <div class="col-10 offset-2">
+                                    <div class="mgs-container-send">
+                                        <div class="send">
+                                            <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, possimus pariatur. Ab quibusdam odit, alias tempore nisi ex repellat sapiente consequatur voluptatibus quae voluptate, nesciunt, omnis eligendi sequi asperiores eaque!</div>
+                                            <div class="data-msg">30/06/2021 17:31</div>
+                                        </div>
+                                    </div> 
                                 </div>
-                            </div> 
-
-                            <div class="mgs-container-send">
-                                <div class="send">
-                                    <div>Ricordati di dargli da mangiare</div>
-                                    <div class="data-msg">30/06/2021 17:31</div>
-                                </div>
-                            </div> 
-
-                            <div class="mgs-container-received">
-                                <div class="received">
-                                    <div>Tutto fatto!</div>
-                                    <div class="data-msg">30/06/2021 17:31</div>
-                                </div>
-                            </div> 
-                            <div class="mgs-container-send">
-                                <div class="send">
-                                    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, possimus pariatur. Ab quibusdam odit, alias tempore nisi ex repellat sapiente consequatur voluptatibus quae voluptate, nesciunt, omnis eligendi sequi asperiores eaque!</div>
-                                    <div class="data-msg">30/06/2021 17:31</div>
-                                </div>
-                            </div> 
-
-                            <div class="mgs-container-received">
-                                <div class="received">
-                                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, perferendis? Provident ab veniam distinctio eveniet animi minus in exercitationem, vitae suscipit explicabo sunt aliquid, quaerat perferendis iure ipsam. Perferendis, optio?</div>
-                                    <div class="data-msg">30/06/2021 17:31</div>
-                                </div>
-                            </div> 
+                            </div>
                         </div>
     
                         <!-- Input & Icons -->
