risposta funziona ma senza delay

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                         <div class="mgs-container-sent">
                                             <div class="sent">
                                                 <div>{{message.text}}</div>
-                                                <div class="data-msg">30/06/2021 17:31</div>
+                                                <div class="data-msg">{{message.date}}</div>
                                             </div>
                                         </div>
                                     </div>
@@ -96,7 +96,7 @@
                                         <div class="mgs-container-received">
                                             <div class="received">
                                                 <div>{{message.text}}</div>
-                                                <div class="data-msg">30/06/2021 17:31</div>
+                                                <div class="data-msg">{{message.date}}</div>
                                             </div>
                                         </div>
                                     </div>
