--- a/index.html
+++ b/index.html
@@ -45,18 +45,31 @@
                         <!-- Search/Input  -->
                         <div class="search-container">
                             <i class="fas fa-search"></i>
-                            <input type="text" placeholder="Cerca o inizia una nuova chat">
+                            <input type="text" placeholder="Cerca o inizia una nuova chat"
+                            v-model="filter" @keyup.enter="filteredContacts()" >
                         </div>
 
                         <!-- Contacts List -->
                         <div class="contacts-container">
-                            <div class="contact-content" v-for="(contact,index) in contacts"
+                            <div class="contact-content" v-if="printContacts()" v-for="(contact,index) in contacts"
                             @click="changeUser(index)">
 
                                 <img :src="createSrc(contact)" class="round-img" alt="">
                                 <h5>{{contact.name}}</h5>
 
                             </div>
+
+                            <!-- con l'else non funziona, senza si -->
+                            <!-- non ho capito perchè -->
+
+                            <div class="contact-content" v-for="(contact,index) in newContacts"
+                            @click="changeUser(index)">
+
+                                <img :src="createSrc(contact)" class="round-img" alt="">
+                                <h5>{{contact.name}}</h5>
+
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -79,7 +92,35 @@
                         <!-- Chat -->
                         <div class="chat">
 
-                            <div v-for="(message,index) in contacts[currentUser].messages">
+                            <div v-if="printContacts()" v-for="(message,index) in contacts[currentUser].messages">
+                                <div class="row" v-if="isASentMsg(message.status)">
+                                    <div class="col-10 offset-2">
+                                        <div class="mgs-container-sent">
+                                            <div class="sent">
+                                                <div>{{message.text}}</div>
+                                                <div class="data-msg">{{message.date}}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row" v-else>
+                                    <div class="col-10">
+                                        <div class="mgs-container-received">
+                                            <div class="received">
+                                                <div>{{message.text}}</div>
+                                                <div class="data-msg">{{message.date}}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <!-- non funziona la lettura dei nuovi messaggi, ovvero il cambio -->
+                            <!-- indice-> contatto-> mesaggi -->
+
+                            <div v-else v-for="(message,index) in newContacts[currentUser].messages">
                                 <div class="row" v-if="isASentMsg(message.status)">
                                     <div class="col-10 offset-2">
                                         <div class="mgs-container-sent">
