--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
                             <!-- non funziona la lettura dei nuovi messaggi, ovvero il cambio -->
-                            <!-- indice-> contatto-> mesaggi -->
+                            <!-- indice-> contatto-> messaggi -->
 
                             <div v-else v-for="(message,index) in newContacts[currentUser].messages">
                                 <div class="row" v-if="isASentMsg(message.status)">
