--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                             <input type="text" placeholder="Cerca o inizia una nuova chat" 
                             v-model="filter"
-                            @keyup.enter="filteredContacts()">
+                            @keyup="filteredContacts()">
 
                         </div>
 
