--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 
                         <!-- Contacts List -->
                         <div class="contacts-container">
-                        <!-- v-if="isListContactsEmpty()" -->
-                        <div class="contact-content" 
-                            v-for="(contact,index) in newContacts"
+
+                            <div class="contact-content" 
+                            v-for="(contact,index) in contacts"
+                            v-if="contact.visible"
                             @click="changeUser(index)">
 
                                 <img :src="createSrc(contact)" class="round-img" alt="">
@@ -75,9 +76,11 @@
 
                         <!-- Info Contact  -->
                         <div class="info-contact d-flex align-items-center">
-                            <img class="round-img" :src="createSrc(newContacts[currentUser])" alt="">
+                            <img class="round-img" 
+                            alt="">
+                            <!-- :src="createSrc(contacts[currentUser])"  -->
                             <div class="info-contact-content">
-                                <h5>{{newContacts[currentUser].name}}</h5>
+                                <h5>{{contacts[currentUser].name}}</h5>
                                 <span class="text-custom">Ultimo accesso oggi alle </span>
                             </div>
                             <i class="fas fa-search"></i>
@@ -87,12 +90,21 @@
 
                         <!-- Chat -->
                         <div class="chat">
-                            <div v-for="(message,index) in newContacts[currentUser].messages">
+                            <div v-for="(message,index) in contacts[currentUser].messages">
                                 <div class="row" v-if="isASentMsg(message.status)">
                                     <div class="col-10 offset-2">
                                         <div class="mgs-container-sent">
                                             <div class="sent">
-                                                <div>{{message.text}}</div>
+                                                <div class="d-flex">
+                                                    <div>{{message.text}}</div>
+                                                    <div class="options-container">
+                                                        <i @click="showOptions(index)" class="fas fa-chevron-down"></i>
+                                                        <div class="msg-options" :class="displayOptions">
+                                                            <div>Message info</div>
+                                                            <div>Delete message</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                                 <div class="data-msg">{{message.date}}</div>
                                             </div>
                                         </div>
@@ -103,7 +115,12 @@
                                     <div class="col-10">
                                         <div class="mgs-container-received">
                                             <div class="received">
-                                                <div>{{message.text}}</div>
+                                                <div class="d-flex">
+                                                    <div>{{message.text}}</div>
+                                                    <div>
+                                                        <i class="fas fa-chevron-down"></i>
+                                                    </div>
+                                                </div>
                                                 <div class="data-msg">{{message.date}}</div>
                                             </div>
                                         </div>
