--- a/index.html
+++ b/index.html
@@ -100,17 +100,19 @@
                                     <div class="col-10 offset-2">
                                         <div class="mgs-container-sent">
                                             <div class="sent">
+
                                                 <div class="d-flex">
-                                                    <div>{{message.text}}</div>
+                                                    <div class="msg-content" >{{message.text}}</div>
                                                     <div class="options-container">
                                                         <i @click="showOptions(index)" class="fas fa-chevron-down"></i>
-                                                        <div v-if="index === indexMsg" class="msg-options" :class="displayOptions">
+                                                        <div v-if="index === indexMsg" class="msg-options-right" :class="displayOptions">
                                                             <div @click="deteteMsg(index)">Delete message</div>
                                                             <div>Message info</div>
                                                         </div> 
                                                     </div>
                                                 </div>
-                                                <div class="data-msg">{{message.date}}</div>
+
+                                                <div class="data-msg">{{message.date}}</div>                                                
                                             </div>
                                         </div>
                                     </div>
@@ -120,16 +122,18 @@
                                     <div class="col-10">
                                         <div class="mgs-container-received">
                                             <div class="received">
+
                                                 <div class="d-flex">
-                                                    <div>{{message.text}}</div>
+                                                    <div class="msg-content" >{{message.text}}</div>
                                                     <div class="options-container">
                                                         <i @click="showOptions(index)" class="fas fa-chevron-down"></i>
-                                                        <div v-if="index === indexMsg" class="msg-options" :class="displayOptions">
+                                                        <div v-if="index === indexMsg" class="msg-options-left" :class="displayOptions">
                                                             <div @click="deteteMsg(index)">Delete message</div>
                                                             <div>Message info</div>
                                                         </div> 
                                                     </div>
                                                 </div>
+
                                                 <div class="data-msg">{{message.date}}</div>
                                             </div>
                                         </div>
