--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             alt="">
                             <div class="info-contact-content">
                                 <h5>{{contacts[currentUser].name}}</h5>
-                                <span class="text-custom">Ultimo accesso oggi alle {{ lastAccess }} </span>
+                                <span class="text-custom">Ultimo accesso il {{ lastAccess }} </span>
                             </div>
                             <i class="fas fa-search"></i>
                             <i class="fas fa-paperclip"></i>
